--- a/parking_locator/android/app/src/main/AndroidManifest.xml
+++ b/parking_locator/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.parking_locator">
    <application
+        android:usesCleartextTraffic="true"
         android:label="parking_locator"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -41,5 +42,6 @@
                android:value="AIzaSyCLuXe__CHkfuS42u3fc4e5H4Z5F-gjkLM"/>
           
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
